# rATC

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
docs/: MANUAL.en.md  MANUAL.md
docs/superpowers/plans/: 2026-06-17-ratc-implementation.md
docs/superpowers/specs/: 2026-06-17-ratc-design.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/converter/: fallback.rs  mod.rs  proxy_converter.rs  rule_converter.rs  ruleset_expander.rs  xray_config.rs
src/model/: clash_config.rs  mod.rs  proxy.rs  proxy_group.rs  rule.rs  rule_provider.rs  rule_set_file.rs
src/store/: paths.rs
src/subscription/: fetcher.rs  parser.rs
src/sysproxy/: mod.rs
src/tui/: app_state.rs  event.rs  mod.rs
src/tui/tabs/: logs.rs  mod.rs  nodes.rs  rules.rs  settings.rs  subscriptions.rs
src/xray/: paths.rs  process.rs
tests/: xray_config.rs
tests/fixtures/: clash_meta.yaml
