[package]
name = "ratc"
version = "0.1.0"
edition = "2021"
description = "Rust Agent for Terminal Clash — a Linux TUI proxy manager"
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
dirs = "5"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
tempfile = "3"
